# sop-satisfier

./: LICENSE  README.md  format.sh  solver-sop-monad.cabal  sop-satisfier.cabal
.github/workflows/: haskell-ci.yml
src/: MyLib.hs  NewtonsMethod.hs  Range.hs  SoP.hs  Unify.hs
src/SoPSat/: NewtonsMethod.hs  Range.hs  Satisfier.hs  SoP.hs  SolverMonad.hs  Unify.hs
src/SoPSat/Internal/: NewtonsMethod.hs  Range.hs  SoP.hs  SolverMonad.hs  Unify.hs
tests/: SystemTests.hs
