cabal-version:      3.0
name:               solver-sop-monad
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Aleksandr Pokatilov
maintainer:         pokatilov0802@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib,
                      SoP,
                      Unify,
                      Range,
                      NewtonsMethod
    build-depends:    base ^>=4.18.0.0,
                      containers ^>=0.6.7,
                      mtl ^>=2.3.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite system-tests
    type:             exitcode-stdio-1.0
    main-is:          SystemTests.hs
    build-depends:    base ^>=4.18.0.0,
                      solver-sop-monad,
                      tasty ^>= 1.5,
                      tasty-hunit ^>=0.9
    hs-source-dirs:   tests
    default-language: Haskell2010
           
                          
